<resources>
     <string name="app_picker_name">应用</string>
    <string name="bookmark_picker_name">书签</string>
    <string name="button_add_calendar">添加事件至日历</string>
    <string name="button_add_contact">添加联系人</string>
    <string name="button_back">返回</string>
    <string name="submit_btn">提交</string>
    <string name="button_book_search">打开图书搜索</string>
    <string name="button_cancel">取消</string>
    <string name="button_custom_product_search">自定义搜索</string>
    <string name="button_dial">拨号</string>
    <string name="button_done">完成</string>
    <string name="button_email">发送email</string>
    <string name="button_get_directions">获取地址</string>
    <string name="button_google_shopper">Google 购物</string>
    <string name="button_mms">发送彩信</string>
    <string name="button_ok">确定</string>
    <string name="button_open_browser">打开浏览器</string>
    <string name="button_product_search">打开产品搜索</string>
    <string name="button_search_book_contents">搜索图书内容</string>
    <string name="button_share_app">共享应用</string>
    <string name="button_share_bookmark">分享书签</string>
    <string name="button_share_by_email">通过email分享</string>
    <string name="button_share_by_sms">通过短信分享</string>
    <string name="button_share_clipboard">分享剪切板</string>
    <string name="button_share_contact">分享联系人</string>
    <string name="button_show_map">显示地图</string>
    <string name="button_sms">发送短信</string>
    <string name="button_web_search">网页搜索</string>
    <string name="button_wifi">连接到网络</string>
    <string name="contents_contact">联系人信息</string>
    <string name="contents_email">Email地址</string>
    <string name="contents_location">地理坐标</string>
    <string name="contents_phone">电话号码</string>
    <string name="contents_sms">短信地址</string>
    <string name="contents_text">纯文本</string>
    <string name="history_clear_one_history_text">删除</string>
    <string name="history_clear_text">删除历史</string>
    <string name="history_email_title">条码扫描器历史</string>
    <string name="history_empty">空的</string>
    <string name="history_empty_detail">没有条码扫描已记录</string>
    <string name="history_send">发送历史</string>
    <string name="history_title">历史</string>
    <string name="menu_encode_mecard">使用MECARD</string>
    <string name="menu_encode_vcard">使用vCard</string>
    <string name="menu_help">帮助</string>
    <string name="menu_history">历史</string>
    <string name="menu_share">分享</string>
    <string name="msg_bulk_mode_scanned">批量扫描：找到条码，已保存</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="msg_default_format">格式</string>
    <string name="msg_default_meta">元数据</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_time">时间</string>
    <string name="msg_default_type">类型</string>
    <string name="msg_encode_contents_failed">无法根据已有数据生成条码。   </string>
    <string name="msg_google_books">谷歌图书</string>
    <string name="msg_google_product">谷歌购物</string>
    <string name="msg_google_shopper_missing">Google 购物未安装</string>
    <string name="msg_install_google_shopper">Google 购物是一款将条码扫描和商品比价相结合的应用，谷歌购物不使用浏览器，您想尝试吗？</string>
    <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
    <string name="msg_redirect">重定向</string>
    <string name="msg_sbc_book_not_searchable">抱歉，无法找到此图书。</string>
    <string name="msg_sbc_failed">抱歉，搜索时遇到错误。</string>
    <string name="msg_sbc_no_page_returned">无页面返回</string>
    <string name="msg_sbc_page">页面</string>
    <string name="msg_sbc_results">结果</string>
    <string name="msg_sbc_searching_book">搜索图书…</string>
    <string name="msg_sbc_snippet_unavailable">摘录不可用</string>
    <string name="msg_sbc_unknown_page">未知页面</string>
    <string name="msg_share_explanation">您可以通过在自己的手机上显示条码，并使用其它手机扫描此条码的方式进行分享</string>
    <string name="msg_share_subject_line">这是我所扫描条码的内容</string>
    <string name="msg_share_text">或键入一些文字</string>
    <string name="msg_sure">你肯定吗？</string>
    <string name="msg_unmount_usb">抱歉，SD卡不可访问。</string>
    <string name="preferences_actions_title">找到条码时</string>
    <string name="preferences_auto_focus_title">使用自动对焦</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存多个条形码</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪切板</string>
    <string name="preferences_custom_product_search_summary" formatted="false">替换：％s=内容，％f=格式，％t=类型</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_decode_1D_title">扫描 一维条码</string>
    <string name="preferences_decode_Data_Matrix_title">扫描 DM码</string>
    <string name="preferences_decode_QR_title">扫描 QR码</string>
    <string name="preferences_device_bug_workarounds_title">设备问题解决办法</string>
    <string name="preferences_disable_continuous_focus_summary">只使用标准对焦模式</string>
    <string name="preferences_disable_continuous_focus_title">没有持续关注</string>
    <string name="preferences_disable_exposure_title">无曝光</string>
    <string name="preferences_front_light_auto">自动</string>
    <string name="preferences_front_light_off">待用</string>
    <string name="preferences_front_light_on">活跃</string>
    <string name="preferences_front_light_summary">前灯可用时，打开前灯</string>
    <string name="preferences_front_light_title">前灯</string>
    <string name="preferences_general_title">一般设置</string>
    <string name="preferences_invert_scan_summary">黑色背景上的白色条形码扫描。在某些设备上。</string>
    <string name="preferences_invert_scan_title">反向扫描</string>
    <string name="preferences_name">设置</string>
    <string name="preferences_play_beep_title">提示音</string>
    <string name="preferences_remember_duplicates_summary">在历史记录中保存重复记录</string>
    <string name="preferences_remember_duplicates_title">记住重复</string>
    <string name="preferences_result_title">结果设置</string>
    <string name="preferences_scanning_title">条码类型选择</string>
    <string name="preferences_search_country">搜索国家</string>
    <string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
    <string name="preferences_supplemental_title">检索更多信息</string>
    <string name="preferences_try_bsplus">尝试条码扫描器+</string>
    <string name="preferences_try_bsplus_summary">增强新的功能和接口</string>
    <string name="preferences_vibrate_title">振动</string>
    <string name="result_address_book">找到联系人信息</string>
    <string name="result_calendar">找到日历事件</string>
    <string name="result_email_address">找到email地址</string>
    <string name="result_geo">找到地理坐标</string>
    <string name="result_isbn">找到图书</string>
    <string name="result_product">找到产品</string>
    <string name="result_sms">找到短信地址</string>
    <string name="result_tel">找到电话号码</string>
    <string name="result_text">找到纯文本</string>
    <string name="result_uri">找到URL</string>
    <string name="result_wifi">发现网络配置</string>
    <string name="sbc_name">Google图书搜索</string>
    <string name="wifi_changing_network">请求连接到网络\u2026</string>
    <string name="wifi_ssid_label">网络SSID</string>
    <string name="wifi_type_label">类型</string>
    <string name="downloading">正在下载基础数据....</string>
    <string name="downloading2">正在下载配送单....</string>
    <string name="download_ok">下载成功</string>
    <string name="download_fail">下载失败,请重新登录</string>
    <string name="download_fail2">下载配送单失败</string>
    <string name="download_fail3">配送单信息下载失败</string>
    <string name="save_dianzifandan_check">请先扫描邮件和拍照</string>
    <string name="save_dianzifandan_fail">保存失败</string>
    <string name="save_dianzifandan_success">保存成功，稍后自动上传</string>
    <string name="msg_default_status">请将条码置于取景框内扫描</string>
    <string name="shifouzhuxiao">是否确认注销？</string>
    <string name="log_off">注销</string>
    <string name="loginName">用户名</string>
    <string name="loginPassword">密  码</string>
    <string name="loginNameHint">请输入用户名</string>
    <string name="passwordHint">请输入密码</string>
    <string name="loginHint">自动登录</string>
    <string name="savePsswordHint">保存密码</string>
    <string name="shifoutuichu">是否确认退出？</string>
    <string name="app_name">CNPL</string>
    <string name="menu_settings">设置</string>
    <string name="menu_out">退出</string>
    <string name="menu_reset">重新加载</string>
    <string name="title_activity_main">CNPL</string>
    <string name="main_home">首页</string>
    <string name="menu_tool">常用工具</string>
    <string name="onkeyOrder">一键下单</string>
    <string name="menu_add">新增</string>
    <string name="menu_update">修改</string>
    <string name="menu_delete">删除</string>
    <string name="send_pro">寄出省</string>
    <string name="rec_pro">寄达省</string>
    <string name="weight">重量</string>
    <string name="login_name">登录名:</string>
    <string name="my_address">我的地址簿</string>
    <string name="report">报表</string>
    <string name="mail_deliver">邮件投递</string>
    <string name="deliver">妥投</string>
    <string name="no_deliver">未妥投</string>
    <string name="dlvdownload">数据下载</string>
    <string name="dlv_dianzifandan">电子返单</string>
    <string name="back">返回</string>
    <string name="deliver_enter">录入</string>
    <string name="deliver_down">基础数据下载</string>
    <string name="deliver_batch_enter">批量录入</string>
    <string name="deliver_add">妥投录入</string>
    <string name="deliver_add_dianzifandan">电子返单</string>
    <string name="no_deliver_add">未妥投录入</string>
    <string name="download">下载</string>
    <string name="downloadpeisongdan">下载配送单</string>
    <string name="upload">上传</string>
    <string name="no_upload">未上传</string>
    <string name="mail_detail">详细信息</string>
    <string name="mail_no">邮&#160;&#160;件&#160;&#160;号</string>
    <string name="deliver_time">上传时间</string>
    <string name="update_time">扫描时间</string>
    <string name="mail_type">邮件类型</string>
    <string name="submit">提交</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>
    <string name="scan">扫描</string>
    <string name="add">增加</string>
    <string name="scan_hint">请输入或者扫描邮件号</string>
    <string name="scan_hint2">请输入或者扫描配送单号</string>
    <string name="revname_hint">请输入收件人姓名</string>
    <string name="fee_hint">请输入金额</string>
    <string name="international">国际</string>
    <string name="internal">国内</string>
    <string name="receive_type">签收类型</string>
    <string name="reveive_name">签收人</string>
    <string name="fee_type">资费类型</string>
    <string name="substitute_fee">代收货款</string>
    <string name="receive_fee">收件人付费</string>
    <string name="fee">收款金额</string>
    <string name="reason">原因</string>
    <string name="follow_action">下一步动作</string>
    <string name="project">项目</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="photo">拍照</string>
    <string name="sign_image">签收图片</string>
    <string name="clean_data">清除过时数据</string>
    <string name="data_download">配送单下载</string>
    <string name="xiazai_tishi">请先下载数据</string>
    <string name="qingchu_ok">清除数据成功</string>
    <string name="qingchu_defeat">清除数据失败</string>
    <string name="loading">正在执行....</string>
    <string name="getdata_ok">获取数据成功</string>
    <string name="getdata_defeat">获取数据失败</string>
    <string name="hint">提示:</string>
    <string name="shifouxiazai">是否确认下载？</string>
    <string name="shifouqingchu">将要清除15天之前的本地数据,是否确认？</string>
    <string name="delete_fail">删除失败</string>
    <string name="save_fail">邮件保存失败</string>
    <string name="shijiang">日期：</string>
    <string name="mailnocuowu">请输入邮件号</string>
    <string name="feeshikong">请输入收款金额</string>
    <string name="shifousave">是否确认保存？</string>
    <string name="shifoudelete">是否确认删除？</string>
    <string name="operation">操作</string>
    <string name="uploaded">数据已上传</string>
    <string name="isdelete">该邮件号已删除</string>
    <string name="issave1">该邮件与</string>
    <string name="issave2">妥投重复，是否继续保存？</string>
    <string name="relief">换班交接</string>
    <string name="on_duty">上班</string>
    <string name="off_duty">下班</string>
    <string name="ex_comp">交接完成</string>
    <string name="code">机构二维码</string>
</resources>